added base activity and baseviwemodel. and enable viewBinding.

--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -1,5 +1,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -8,19 +9,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/activity_content">
-
     </FrameLayout>
 
-
-    <ProgressBar
+    <TextView
+        android:id="@+id/noInternetText"
+        android:text="No internet connection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Widget.AppCompat.ProgressBar"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/activity_content"
+        app:layout_constraintEnd_toEndOf="@+id/activity_content"
+        app:layout_constraintStart_toStartOf="@+id/activity_content"
+        app:layout_constraintTop_toBottomOf="@+id/refreshImage"
+        tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:onClick="onClick"
+        android:id="@+id/refreshImage"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/refreshimage"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
-        android:id="@+id/progress_bar"
-        android:visibility="gone"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
