--- a/app/src/main/res/layout/news_list_view.xml
+++ b/app/src/main/res/layout/news_list_view.xml
@@ -1,68 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <data>
-        <variable
-            name="children"
-            type="com.parth.kotlinnewsapplication.data.entities.Children" />
-
-
-    </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_margin="2dp"
-        android:padding="1dp"
-        android:background="@color/newsCardViewblack"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="2dp"
+    android:padding="1dp"
+    android:background="@color/newsCardViewblack"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <androidx.cardview.widget.CardView
+        android:layout_margin="5dp"
+        android:background="@color/newsCardViewColor"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <androidx.cardview.widget.CardView
-            android:layout_margin="5dp"
-            android:background="@color/newsCardViewColor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:ignore="MissingConstraints">
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content">-->
 
-                <ImageView
-                    android:scaleType="fitXY"
-                    android:id="@+id/picture"
-                    app:image="@{children.data}"
-                    android:layout_width="186dp"
-                    android:layout_height="175dp"
-                    android:background="@drawable/ic_launcher_background"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:ignore="MissingConstraints" />
+<!--            <ImageView-->
+<!--                android:scaleType="fitXY"-->
+<!--                android:id="@+id/picture"-->
+<!--                app:image="@{children.data}"-->
+<!--                android:layout_width="186dp"-->
+<!--                android:layout_height="175dp"-->
+<!--                android:background="@drawable/ic_launcher_background"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                tools:ignore="MissingConstraints" />-->
 
-                <TextView
-                    android:id="@+id/title"
-                    style="@style/TextViewStyle"
-                    android:layout_width="192dp"
-                    android:layout_height="65dp"
-                    android:layout_marginTop="16dp"
-                    android:ellipsize="end"
-                    android:maxLines="2"
-                    android:text="@={children.data.title}"
-                    app:layout_constraintStart_toEndOf="@+id/picture"
-                    app:layout_constraintTop_toTopOf="parent" />
+<!--            <TextView-->
+<!--                android:id="@+id/title"-->
+<!--                style="@style/TextViewStyle"-->
+<!--                android:layout_width="192dp"-->
+<!--                android:layout_height="65dp"-->
+<!--                android:layout_marginTop="16dp"-->
+<!--                android:ellipsize="end"-->
+<!--                android:maxLines="2"-->
+<!--                android:text="@={children.data.title}"-->
+<!--                app:layout_constraintStart_toEndOf="@+id/picture"-->
+<!--                app:layout_constraintTop_toTopOf="parent" />-->
 
-                <TextView
-                    android:id="@+id/author"
-                    style="@style/TextViewStyle"
-                    android:layout_width="179dp"
-                    android:layout_height="43dp"
-                    android:layout_marginTop="12dp"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text="@={children.data.author}"
-                    app:layout_constraintStart_toEndOf="@+id/picture"
-                    app:layout_constraintTop_toBottomOf="@+id/title"
-                    tools:ignore="MissingConstraints" />
+<!--            <TextView-->
+<!--                android:id="@+id/author"-->
+<!--                style="@style/TextViewStyle"-->
+<!--                android:layout_width="179dp"-->
+<!--                android:layout_height="43dp"-->
+<!--                android:layout_marginTop="12dp"-->
+<!--                android:ellipsize="end"-->
+<!--                android:maxLines="1"-->
+<!--                android:text="@={children.data.author}"-->
+<!--                app:layout_constraintStart_toEndOf="@+id/picture"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/title"-->
+<!--                tools:ignore="MissingConstraints" />-->
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
